--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,15 +13,28 @@ dependencies = [
   "dacite",
   "numpy",
   "gymnasium",
+  "pin",
+  "xacrodoc",
+  'meshcat',
+  'viser',
+  'matplotlib',
 
+  "pytest",
+  "robot_descriptions", # ok for quick testing, but very old, and interia wrong on UR5, etc..
+
+  "tf_transformations @ git+https://github.com/zacharyyamaoka/tf_transformations.git@main",
+  "ruckig-pro @ git+https://github.com/zacharyyamaoka/ruckig-pro-v0.16.1.git@main",
+  # Helpers
+  "nbstripout", # remove notebook output to prevent flooding version control
+
+  # make this optional at some point? 
+  "dora-rs-cli",
 ]
 
 [project.optional-dependencies]
 # Install with `pip install .[core]` or `pip install .[full]`
 
-testing = [
-
-]
+testing = []
 
 viz = [
   # Interactive graph visualization (static Mermaid.js graphs work without these)
@@ -36,7 +49,7 @@ full = [
   "torch",
   "torchvision",
   "wandb",
-  
+
   # Interactive graph visualization
   "dash",
   "dash-cytoscape",
@@ -48,37 +61,27 @@ allow-direct-references = true
 
 [tool.pytest.ini_options]
 filterwarnings = [
-    "ignore:Please update your 'hppfcl' imports to 'coal'",
-    "ignore:zmq.eventloop.ioloop is deprecated",
-    "ignore:This function has been marked as deprecated"
+  "ignore:Please update your 'hppfcl' imports to 'coal'",
+  "ignore:zmq.eventloop.ioloop is deprecated",
+  "ignore:This function has been marked as deprecated",
 ]
-markers = [
-    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
-]
+markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
 
 [tool.ruff]
 line-length = 88
-exclude = [
-    "__pycache__",
-    "node_modules",
-    ".venv",
-    "venv",
-    "build",
-    "dist",
-]
+exclude = ["__pycache__", "node_modules", ".venv", "venv", "build", "dist"]
 
 [tool.ruff.lint]
 # Similar to Pinocchio's configuration
 select = [
-    "E",    # pycodestyle errors
-    "F",    # Pyflakes
-    "I",    # isort (import sorting)
-    "PTH",  # flake8-use-pathlib
-    "RUF",  # Ruff-specific rules
-    "UP",   # pyupgrade
-    "W",    # pycodestyle warnings
+  "E",   # pycodestyle errors
+  "F",   # Pyflakes
+  "I",   # isort (import sorting)
+  "PTH", # flake8-use-pathlib
+  "RUF", # Ruff-specific rules
+  "UP",  # pyupgrade
+  "W",   # pycodestyle warnings
 ]
 extend-ignore = [
-    "RUF048",  # Following Pinocchio's ignore
+  "RUF048", # Following Pinocchio's ignore
 ]
-
